# rust-mcp-sample

server/: Cargo.toml
server/src/: main.rs
server/src/common/: counter.rs
