[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = {version = "0.1", features = ["server", "transport-sse-server", "transport-io"]}
tokio = {version = "1.0", features = ["full"]}
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
